--- a/wear/src/main/res/values/colors.xml
+++ b/wear/src/main/res/values/colors.xml
@@ -31,8 +31,10 @@
     <color name="dark_warning">#ffff00</color>
     <color name="dark_alarm">#ff4444</color>
 
+    <color name="dark_veryHighColor">@color/RED</color>
     <color name="dark_highColor">@color/yellow_A200</color>
-    <color name="dark_lowColor">@color/RED</color>
+    <color name="dark_lowColor">@color/yellow_A200</color>
+    <color name="dark_veryLowColor">@color/RED</color>
     <color name="dark_midColor">@color/grey_50</color>
     <color name="dark_gridColor">@color/grey_50</color>
 
