List and Save profiles using current insulin

--- a/plugins/insulin/src/main/res/layout/insulin_fragment.xml
+++ b/plugins/insulin/src/main/res/layout/insulin_fragment.xml
@@ -249,6 +249,12 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentTop="true" />
+
         </LinearLayout>
 
     </LinearLayout>
