--- a/plugins/automation-state/src/main/res/layout/automation_state_value_item.xml
+++ b/plugins/automation-state/src/main/res/layout/automation_state_value_item.xml
@@ -5,20 +5,28 @@
     android:orientation="horizontal"
     android:padding="8dp">
 
-    <TextView
-        android:id="@+id/stateValue"
+    <FrameLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:textSize="16sp"/>
+        android:layout_marginEnd="8dp">
+
+        <TextView
+            android:id="@+id/stateValue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:padding="4dp"
+            android:background = "@/"/>
+    </FrameLayout>
 
     <ImageButton
         android:id="@+id/deleteButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
         android:background="@color/buttonBackground"
         android:contentDescription="@string/delete_short"
-        android:padding="8dp"
+        android:padding="4dp"
         android:src="@android:drawable/ic_delete" />
 
 </LinearLayout>
